--- a/reusabledialog/src/main/res/layout/fragment_reusable_dialog.xml
+++ b/reusabledialog/src/main/res/layout/fragment_reusable_dialog.xml
@@ -8,6 +8,16 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/ivDialogIcon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:importantForAccessibility="no"
+        android:src="?android:attr/alertDialogIcon" />
+
     <TextView
         android:id="@+id/tvDialogTitle"
         android:layout_width="match_parent"
@@ -15,7 +25,7 @@
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:textColor="@android:color/black"
         tools:text="Lorem Khaled Ipsum is a major key to success." />
 
